# embedded

./: .gitignore  CMakeLists.txt  Makefile  README.md  gpio.c  gpio.h  main.c  stm32_ls.ld  systick.c
include/: gpio.h  systick.h  tim.h  uart.h
src/: gpio.c  main.c  stm32f411_startup.c  systick.c  tim.c  uart.c
